update to jvm config