@@ -1,1 +1,6 @@
 -Xmx16g 
+--add-opens java.base/java.io=ALL-UNNAMED
+--add-opens java.base/java.lang=ALL-UNNAMED
+--add-opens java.base/java.util=ALL-UNNAMED
+--add-opens jdk.unsupported/sun.misc=ALL-UNNAMED
+--enable-native-access=ALL-UNNAMED
